--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Arcade</string>
+    <string name="twenty_forty_eight">2048</string>
+    <string name="score"><u>Score</u></string>
+    <string name="restart">Restart</string>
 </resources>
