--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
 
     <string name="ex">X</string>
     <string name="oh">O</string>
+    <string name="your_turn">Your Turn!</string>
+    <string name="opponents_turn">Opponent\'s Turn!</string>
 </resources>
