Finish basic Host/Join activity for turn-based multiplayer games. Gitignore Android Studio personal dictionaries.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Arcade</string>
 
+    <string name="host_label">Host:\nShow a joinee this code!</string>
+    <string name="join_label">Join:\nType someone\'s host code!</string>
+    <string name="join_code_hint">Enter game code!</string>
+
     <string name="twenty_forty_eight">2048</string>
     <string name="score"><u>Score</u></string>
     <string name="restart">Restart</string>
