--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,19 @@
 <resources>
     <string name="app_name">Arcade</string>
 
+    <string name="error">error</string>
+
+    <!--  turn based multiplayer  -->
     <string name="host_label">Host:\nShow a joinee this code!</string>
     <string name="join_label">Join:\nType someone\'s host code!</string>
     <string name="join_code_hint">Enter game code!</string>
 
+    <!--  2048  -->
     <string name="twenty_forty_eight">2048</string>
     <string name="score"><u>Score</u></string>
     <string name="restart">Restart</string>
 
+    <!--  Tic Tac Toe  -->
     <string name="ex">X</string>
     <string name="oh">O</string>
     <string name="your_turn">Your Turn!</string>
